# Backend-Ev

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  out.txt  pyproject.toml  pytest_trace_full.txt  test_out.txt
Docs/: API_SPEC.md  Backend_Implementation.md  HLD_TRD_EVChargeFinder.md  PRD_EVChargeFinder.md  endpoints.md
alembic/: env.py
alembic/versions/: 3dd7b2dba912_add_admin_cancellation_enum.py  42b070653d86_initial_schema.py  4dd8c74248f4_increase_user_phone_length.py  cd0ad2d4e243_add_cancelled_by_system_to_booking_.py  df2ec606a3b3_add_station_managers.py
app/: config.py  main.py
app/db/: database.py  redis.py
app/middleware/: auth_middleware.py  correlation.py  error_handler.py  metrics.py  rate_limiter.py
app/ml/: __init__.py  feature_engineering.py  model.py  training.py
app/models/: __init__.py  booking.py  notification.py  payment.py  review.py  slot.py  station.py  user.py
app/routers/: admin.py  auth.py  bookings.py  demand.py  iot.py  metrics.py  notifications.py  payments.py  reviews.py  routes.py  slots.py  stations.py  websockets.py  ws.py
app/schemas/: __init__.py  admin.py  auth.py  booking.py  demand.py  payment.py  review.py  route.py  station.py
app/services/: auth_service.py  booking_service.py  demand_service.py  iot_simulator.py  notification_service.py  payment_service.py  pricing_service.py  review_service.py  route_service.py  (+1 more)
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
scripts/: generate_rn_docs.py  iot_simulator.py  run_demo.sh
tests/: conftest.py
(+18 files in other folders)
