[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-charge-finder"
version = "0.1.0"
description = "FastAPI backend for EVChargeFinder"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "alembic",
    "pydantic-settings",
    "asyncpg",
    "redis",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "razorpay",
    "python-multipart",
    "geoalchemy2",
    "pydantic[email]"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]
